12 Apr 2004 Sylvain Pion
- Added preconditions (denominator != 0) in operator/ of Gmpz and Gmpq.

10 Apr 2004 Sylvain Pion
- Added expensive_assertions in to_interval(CORE::Expr) since it was buggy.

9 Apr 2004 Sylvain Pion
- PGCC workarounds.

29 March 2004 Radu Ursu
- rolled back some changes in doc_tex/NumberTypeSupport_ref/main.tex 

26 March 2004 Radu Ursu
-made doc work with the new implementation of the Manual tools

24 Feb 2004 Sylvain Pion
- Fix return void expression detected by MipsPro.

21 Feb 2004 Sylvain Pion
- Add swap() to Quotient and MP_Float.

13 Feb 2004 Sylvain Pion
- Remove traces of CLN.

1 Feb 2004 Sylvain Pion
- Improve the precision of to_interval(Quotient<MP_Float>).

4.131 (18 Jan 2004)
- Remove CGAL_CFG_RETURN_TYPE_BUG workarounds.

4.130 (18 Jan 2004)
- Remove obsolete *ITERATOR_TRAITS_POINTER_SPEC* workarounds.

4.129 (18 Jan 2004)
- Remove obsolete CGAL_CFG_MATCHING_BUG_2 workaround (VC++ <= 7.0).

4.128 (18 Jan 2004)
- Add tests for overflow in to_double(Gmpq and Quotient<MP_Float>). 

4.127 (15 Dec 2003)
- Proper fix for SunPro.

4.126 (4 Dec 2003)
- Protect operator>>(MP_Float) against end of stream.

4.125 (1 Dec 2003)
- Quotient<NT> now supports sqrt() iff NT supports it.

4.124 (28 Nov 2003)
- SunPro 5.3 workaround.

4.123 (25 Nov 2003) [af]
- Added #include of gmpxx.h

====================================== CGAL 3.0 =============================

4.122 (28 October 2003)
- Protect to_double(Quotient<MP_Float>) against overflows like Quotient<Gmpz>.

4.121 (27 October 2003)
- Fix Gmpq's operator>> in case of end of stream.

4.120 (22 October 2003) [af]
- new headers

4.119 (1 October 2003) [af]
- Moved \chapter to main.tex

4.118 (23 September 2003) [af]
- Added constructor Gmqp(int,int) and replaced Gmpq(char*) with Gmpq(std::string)
- Replaced constructor Gmpz(char*) with Gmpz(std::string)

4.117 (18 September 2003)
- New headers

4.116 (10 September 2003)
- test/utilities.C : add Interval_nt<>.

4.115 (1 September 2003)